Remove user and admin transfership done
